--- a/Front End/index.html
+++ b/Front End/index.html
@@ -6,11 +6,11 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
 
         <div class="conteudo">
+
             <nav class="navbar navbar-expand-lg bg-primary">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">Navbar</a>
@@ -42,7 +42,7 @@
                         </ul>
                         <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-primary" type="submit">Search</button>
                         </form>
                     </div>
                 </div>
@@ -55,13 +55,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="imagens/download.jpg" class="d-block w-100 imagens" alt="...">
+                        <img src="imagens/Documentos.png" class="d-block w-100 imagens" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="imagens/download.jfif" class="d-block w-100 imagens" alt="...">
+                        <img src="imagens/Documentos.png" class="d-block w-100 imagens" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="imagens/images.jfif" class="d-block w-100 imagens" alt="...">
+                        <img src="imagens/Documentos.png" class="d-block w-100 imagens" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -73,6 +73,47 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+
+            <div class="cards">
+                
+                <div class="card" style="width: 18rem;">
+                    <img src="imagens/card_image.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+
+                <div class="card" style="width: 18rem;">
+                    <img src="imagens/card_image.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+
+                <div class="card" style="width: 18rem;">
+                    <img src="imagens/card_image.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+
+                <div class="card" style="width: 18rem;">
+                    <img src="imagens/card_image.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
 
 
