--- a/Front End/index.html
+++ b/Front End/index.html
@@ -19,10 +19,12 @@
                 <h2>777 Eventos</h2>
             </div>
             <div class="links">
-                <a href="">Todos os eventos</a>
-                <a href="">Agenda</a>
-                <a href="">Sair</a>
-                <a href="">Avalie-nos</a>
+                <a href="">TODOS OS EVENTOS</a>
+                <a href="">AGENDA</a>
+                <a href="">SAIR</a>
+                <a href="">AVALIE-NOS</a>
+                <img src="./imagens/icon_search.svg" alt="icon_search">
+                <img src="./imagens/icon_user.svg" alt="">
             </div>
         </div>
 
