--- a/Front End/Screens/Informações do evento/Codes/info.html
+++ b/Front End/Screens/Informações do evento/Codes/info.html
@@ -8,11 +8,29 @@
 </head>
 <body>
     <div class="container">
-        <header></header>
+
+        <div class="header">
+            <a href="">
+                <div class="logo">
+                    <img class="img img-logo1" src="../../Dashboard/Images/7_3.png" alt="">
+                    <h2>777 Eventos</h2>
+                </div>
+            </a>
+            <div class="links">
+                <a href="../../Dashboard/Codes/index.html">INÍCIO</a>
+                <a href="">TODOS OS EVENTOS</a>
+                <a href="">AGENDA</a>
+                <a href="">AVALIE-NOS</a>
+                <a href="">SAIR</a>
+                <img src="../../Dashboard/Images/icon_search.svg" alt="icon_search">
+                <img src="../../Dashboard/Images/icon_user.svg" alt="">
+            </div>
+        </div>
+
         <div class="conteudo">
             <div class="show">
                 <div class="showphoto">
-                    <img src="../Imagens/evento.webp" id="eventoimagem"/>
+                    <img src="../Images/evento.webp" id="eventoimagem"/>
                 </div>
                 <div class="showinfo">
                     <h3>18 e 19 de out. | Natal - RN</h3>
@@ -42,7 +60,7 @@
         <footer class="rodape">
             <div class="rodape1">
                 <div class="divrodape">
-                    <img src="../Imagens/777_logo_horizontal.png" style="width: 156px; margin: 0px 60px;"/>
+                    <img src="../Images/777_logo_horizontal.png" style="width: 156px; margin: 0px 60px;"/>
                 </div>
                 <div class="divrodape" style="flex: 1;">
                     <a href="">Home</a>
