--- a/Front End/Screens/Dashboard/Codes/index.html
+++ b/Front End/Screens/Dashboard/Codes/index.html
@@ -14,15 +14,18 @@
     <div class="screen">
 
         <div class="header">
-            <div class="logo">
-                <img class="img img-logo1" src="../Images/7_3.png" alt="">
-                <h2>777 Eventos</h2>
-            </div>
+            <a href="">
+                <div class="logo">
+                    <img class="img img-logo1" src="../Images/7_3.png" alt="">
+                    <h2>777 Eventos</h2>
+                </div>
+            </a>
             <div class="links">
+                <a href="./index.html">INÍCIO</a>
                 <a href="">TODOS OS EVENTOS</a>
                 <a href="">AGENDA</a>
-                <a href="">SAIR</a>
                 <a href="">AVALIE-NOS</a>
+                <a href="">SAIR</a>
                 <img src="../Images/icon_search.svg" alt="icon_search">
                 <img src="../Images/icon_user.svg" alt="">
             </div>
@@ -38,18 +41,17 @@
                     <h1>Natal Trap Festival</h1>
                     <h3>Venha para um dos melhores festivais de trap nacional do Brasil! Aqui você verá os melhores do cenário atual. Tenho certeza que você vai se divertir! <br> Clique em saiba mais para ver os melhores preços do mercado.</h3>
                     <h2>25 de Maio de 2024</h2>
-                    <button>Saiba mais...</button>
+                    <a href="../../Informações do evento/Codes/info.html"><button>Saiba mais...</button></a>
                 </div>
             </div>
 
             <div class="post post2 evento2">
                 <div class="texto-post texto-post2">
                     <h1>Turnê Tardezinha 2023</h1>
-                    <h3>A espera acabou! Thiaguinho e a “Tardezinha”, um dos maiores eventos musicais do país está de volta para uma turnê histórica que passará por mais de 20 cidades e todas as regiões do Brasil ao longo do ano de 2023.
-
-                        <br>        Os eventos acontecerão de abril a dezembro de 2023 e esperamos todos vocês para matar a saudade com a mesma energia que vivemos as 162 edições da Tardezinha ao longo de 4 anos. Garanta o seu ingresso e vamos viver juntos os melhores dias de nossas vidas!>
+                    <h4>A espera acabou! Thiaguinho e a “Tardezinha”, um dos maiores eventos musicais do país está de volta para uma turnê histórica que passará por mais de 20 cidades e todas as regiões do Brasil ao longo do ano de 2023.
+                        <br>Os eventos acontecerão de abril a dezembro de 2023 e esperamos todos vocês para matar a saudade com a mesma energia que vivemos as 162 edições da Tardezinha ao longo de 4 anos. Garanta o seu ingresso e vamos viver juntos os melhores dias de nossas vidas!</h4>
                     <h2>Várias datas</h2>
-                    <button>Saiba mais...</button>
+                    <a href="../../Informações do evento/Codes/info.html"><button>Saiba mais...</button></a>
                 </div>
                 <div class="image-post image-post2">
                     <img src="../Images/tardezinha-quadrada.png" alt="">
@@ -64,7 +66,7 @@
                     <h1>Kayblack</h1>
                     <h3>Vá para o show de Kayblack no natal trap festival <br> </h3>
                     <h2>25 de Maio de 2024</h2>
-                    <button>Saiba mais...</button>
+                    <a href="../../Informações do evento/Codes/info.html"><button>Saiba mais...</button></a>
                 </div>
             </div>
             
@@ -73,7 +75,7 @@
                     <h1>Natal de Jucurutu</h1>
                     <h3>No natal de Jucurutu teremos diversos cantores! Como principais teremos calcinha preta e Iguinho e Lulinha.<br> Vai ficar de fora dessa? É de graça viu! </h3>
                     <h2>24 de Dezembro de 2023</h2>
-                    <button>Saiba mais...</button>
+                    <a href="../../Informações do evento/Codes/info.html"><button>Saiba mais...</button></a>
                 </div>
                 <div class="image-post image-post2">
                     <img src="../Images/jucurutu-quadrada.png" alt="">
