--- a/Front End/Screens/Cadastro/cadastroIndex.html
+++ b/Front End/Screens/Cadastro/cadastroIndex.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleadiquira.css">
+    <link rel="stylesheet" href="cadastroStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans"  rel="stylesheet">
     <link rel="stylesheet" href="">
     <title>Login - 777 eventos</title>
 </head>
 <body>
     <div class="main">
-        <img src="7_3.png" alt="" width="250" height="250">
+        <img src="../../imagens/30praum_evento.png" alt="" width="250" height="250">
         <p id="mensagem_inicial"><strong>Bem vindo ao 777 eventos</strong></p>      
         <div class="login">
-            <p class="email">Nome completo</p>
+            <p class="inputs">Nome completo</p>
             <input id="input" placeholder="Informe seu nome completo" type="text">
-            <p class="email">E-mail</p>
+            <p class="inputs">E-mail</p>
             <input id="input" placeholder="Digite um endereço de e-mail válido" type="text">
-            <p class="email">Senha</p>
-            <input id="input" placeholder="DIgite uma senha" type="text">
+            <p class="inputs">Senha</p>
+            <input id="input" placeholder="Digite uma senha" type="text">
         </div>
         <button id="continuar">Continuar</button>
 
