--- a/Front End/Screens/Login/Codes/loginIndex.html
+++ b/Front End/Screens/Login/Codes/loginIndex.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="main">
-        <img src="." alt="" height="250" width="250">
+        <img src="../../../imagens/logo_preta_simples.png" alt="" height="250" width="250">
         <p id="mensagem_inicial"><strong>Bem vindo ao 777 Eventos</strong></p>
         
         <div class="login">
@@ -22,24 +22,24 @@
 
         <p id="outra_opção">Ou escolha a opção</p>
         <div class="outras_opções">
-            <a href="">
-                <button class="opção" id="entrar_google">
-                    <img id="logo_google" src="logo_google.svg" alt="Google">
+            <a href="" style="text-decoration: none;">
+                <button class="opção" id="entrar_google" >
+                    <img id="logo_google" src="../../../imagens/logo_google.svg" alt="Google">
                     <p id="texto_google">Continuar com Google</p>
                 </button>
             </a>
-            <a href="">
+            <a href="" style="text-decoration: none;">
                 <button class="opção" id="entrar_facebook">
-                    <img id="logo_facebook" src="logo_facebook.svg" alt="Facebook">
+                    <img id="logo_facebook" src="../../../imagens/logo_facebook.svg" alt="Facebook">
                     <p id="texto_facebook">Continuar com Facebook</p>
                 </button>
             </a>
         </div>
         <div class="cadastro">
-            <p id="cadastrar">Não tem conta? <a id="cadastrar_link" href="cadastro_page.html">Criar conta</a></p>
+            <p id="cadastrar">Não tem conta? <a id="cadastrar_link" href="cadastro_page.html" style="text-decoration: none;">Criar conta</a></p>
         </div>
         <div class="termos">
-            <p id="texto_termos">Este site é protegido pelo hCaptcha e está sujeito a sua <a id="link_termos" href="https://www.hcaptcha.com/privacy">Política de privacidade</a> e <a id="link_termos" href="https://www.hcaptcha.com/terms">Termos de Uso</a></p>
+            <p id="texto_termos">Este site é protegido pelo hCaptcha e está sujeito a sua <a id="link_termos" href="https://www.hcaptcha.com/privacy" style="text-decoration: none;">Política de privacidade</a> e <a id="link_termos" href="https://www.hcaptcha.com/terms" style="text-decoration: none;">Termos de Uso</a></p>
         </div>
     </div>
 </body>
