--- a/Front End/Screens/Cadastro/cadastroIndex.html
+++ b/Front End/Screens/Cadastro/cadastroIndex.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cadastroStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans"  rel="stylesheet">
-    <link rel="stylesheet" href="">
-    <title>Login - 777 eventos</title>
+    <title>Cadastro - 777 Eventos</title>
 </head>
 <body>
     <div class="main">
-        <img src="../../imagens/30praum_evento.png" alt="" width="250" height="250">
+        <img src="../../imagens/logo_preta_simples.png" alt="" width="250" height="250">
         <p id="mensagem_inicial"><strong>Bem vindo ao 777 eventos</strong></p>      
         <div class="login">
             <p class="inputs">Nome completo</p>
@@ -24,24 +23,24 @@
 
         <p id="outra_opção">Ou escolha a opção</p>
         <div class="outras_opções">
-            <a href="">
+            <a href="" style="text-decoration: none;">
                 <button class="opção" id="entrar_google">
-                    <img id="logo_google" src="logo_google.svg" alt="Google">
+                    <img id="logo_google" src="../../imagens/logo_google.svg" alt="Google">
                     <p id="texto_google">Continuar com Google</p>
                 </button>
             </a>
-            <a href="">
+            <a href="" style="text-decoration: none;">
                 <button class="opção" id="entrar_facebook">
-                    <img id="logo_facebook" src="logo_facebook.svg" alt="Facebook">
+                    <img id="logo_facebook" src="../../imagens/logo_facebook.svg" alt="Facebook">
                     <p id="texto_facebook">Continuar com Facebook</p>
                 </button>
             </a>
         </div>
         <div class="cadastro">
-            <p id="cadastrar">Não tem conta? <a id="cadastrar_link" href="">Criar conta</a></p>
+            <p id="cadastrar">Não tem conta? <a id="cadastrar_link" href="" style="text-decoration: none;">Criar conta</a></p>
         </div>
         <div class="termos">
-            <p id="texto_termos">Este site é protegido pelo hCaptcha e está sujeito a sua <a id="link_termos" href="https://www.hcaptcha.com/privacy">Política de privacidade</a> e <a id="link_termos" href="https://www.hcaptcha.com/terms">Termos de Uso</a></p>
+            <p id="texto_termos">Este site é protegido pelo hCaptcha e está sujeito a sua <a id="link_termos" href="https://www.hcaptcha.com/privacy" style="text-decoration: none;">Política de privacidade</a> e <a id="link_termos" href="https://www.hcaptcha.com/terms" style="text-decoration: none;">Termos de Uso</a></p>
         </div>
     </div>
 </body>
