--- a/Front End/Screens/Inicio/index.html
+++ b/Front End/Screens/Inicio/index.html
@@ -21,7 +21,7 @@
                     <div class="slide-content">
                         <img class="slide-image" src="./assets/imgs/EVENTOS 7 7 7.png" alt="777 Eventos" />
                         <div class="slide-description">
-                            <a href="https//youtube.com" style="text-decoration: none; color: white"><h3>777 Eventos</h3></a>
+                            <a href="../Dashboard/Codes/index.html" style="text-decoration: none; color: white"><h3>777 Eventos</h3></a>
                             <p>Clique no nome de qualquer slide para saber mais detalhes!</p>
                         </div>
                     </div>
@@ -30,7 +30,7 @@
                     <div class="slide-content">
                         <img class="slide-image" src="./assets/imgs/cabelinho.png" alt="MC Cabelinho" />
                         <div class="slide-description">
-                            <a href="https//youtube.com" style="text-decoration: none; color: white"><h3>MC Cabelinho</h3></a>
+                            <a href="../Dashboard/Codes/index.html" style="text-decoration: none; color: white"><h3>MC Cabelinho</h3></a>
                             <p>Natal TRAP</p>
                         </div>
                     </div>
@@ -39,7 +39,7 @@
                     <div class="slide-content">
                         <img class="slide-image" src="./assets/imgs/kayblack.png" alt="KayBlack" />
                         <div class="slide-description">
-                            <a href="https//youtube.com" style="text-decoration: none; color: white"><h3>KayBlack</h3></a>
+                            <a href="../Dashboard/Codes/index.html" style="text-decoration: none; color: white"><h3>KayBlack</h3></a>
                             <p>Natal TRAP</p>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                     <div class="slide-content">
                         <img class="slide-image" src="./assets/imgs/tiaguinho.png" alt="Tiaguinho" />
                         <div class="slide-description">
-                            <a href="https//youtube.com" style="text-decoration: none; color: white"><h3>Tiaguinho</h3></a>
+                            <a href="../Dashboard/Codes/index.html" style="text-decoration: none; color: white"><h3>Tiaguinho</h3></a>
                             <p>Turnê Tardezinha</p>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                     <div class="slide-content">
                         <img class="slide-image" src="./assets/imgs/calcinha_preta.png" alt="Calcinha Preta" />
                         <div class="slide-description">
-                            <a href="https//youtube.com" style="text-decoration: none; color: white"><h3>Calcinha Preta</h3></a>
+                            <a href="../Dashboard/Codes/index.html" style="text-decoration: none; color: white"><h3>Calcinha Preta</h3></a>
                             <p>Natal de Jucurutu/RN</p>
                         </div>
                     </div>
