--- a/Front End/Screens/Informações do evento/Codes/info.html
+++ b/Front End/Screens/Informações do evento/Codes/info.html
@@ -23,7 +23,7 @@
                 <a href="">AVALIE-NOS</a>
                 <a href="">SAIR</a>
                 <img src="../../Dashboard/Images/icon_search.svg" alt="icon_search">
-                <img src="../../Dashboard/Images/icon_user.svg" alt="">
+                <button style="text-decoration: none; border: none; background-color: white;"><a href="../../Perfil/Codes/perfil.html"><img src="../Images/icon_user.svg" alt=""></button>
             </div>
         </div>
 
