--- a/Front End/Screens/Informações do evento/Codes/info.html
+++ b/Front End/Screens/Informações do evento/Codes/info.html
@@ -10,20 +10,22 @@
     <div class="container">
 
         <div class="header">
-            <a href="">
-                <div class="logo">
-                    <img class="img img-logo1" src="../../Dashboard/Images/7_3.png" alt="">
-                    <h2>777 Eventos</h2>
-                </div>
-            </a>
+            <div class="logo">
+                <img class="img img-logo1" src="../../Dashboard/Images/7_3.png" alt="">
+                <h2>777 Eventos</h2>
+            </div>
             <div class="links">
-                <a href="../../Dashboard/Codes/index.html">INÍCIO</a>
+                <a href="./index.html">INÍCIO</a>
                 <a href="">TODOS OS EVENTOS</a>
                 <a href="">AGENDA</a>
                 <a href="">AVALIE-NOS</a>
                 <a href="">SAIR</a>
-                <img src="../../Dashboard/Images/icon_search.svg" alt="icon_search">
-                <button style="text-decoration: none; border: none; background-color: white;"><a href="../../Perfil/Codes/perfil.html"><img src="../Images/icon_user.svg" alt=""></button>
+                <img src="../../Dashboard/Images/icon_search.svg">
+                <button style="text-decoration: none; border: none; background-color: white;">
+                    <a href="../../Perfil/Codes/perfil.html">
+                        <img src="../Images/icon_user.svg" alt="">
+                    </a>
+                </button>
             </div>
         </div>
 
