--- a/Front End/Screens/Dashboard/Codes/index.html
+++ b/Front End/Screens/Dashboard/Codes/index.html
@@ -13,19 +13,20 @@
 
     <div class="header">
         <div class="logo">
-            <img class="img img-logo1" src="../Images/7_3.png" alt="">
-            <h2>777 Eventos</h2>
+            <a style="text-decoration: none;" href="../../Dashboard/Codes/index.html">
+                <img class="img img-logo1" src="../../Dashboard/Images/7_3.png" alt="">
+                <h2>777 Eventos</h2>
+            </a>
         </div>
         <div class="links">
-            <a href="./index.html">INÍCIO</a>
-            <a href="">TODOS OS EVENTOS</a>
-            <a href="">AGENDA</a>
-            <a href="">AVALIE-NOS</a>
-            <a href="">SAIR</a>
-            <img src="../Images/icon_search.svg">
+            <a href="../../Dashboard/Codes/index.html">INÍCIO</a>
+            <a href="../../Lista de eventos/Codes/lista_de_eventos.html">TODOS OS EVENTOS</a>
+            <a href="../../Angenda mês/Codes/calendarioindex.html">AGENDA</a>
+            <a href="../../Login/Codes/loginIndex.html">SAIR</a>
+            <img src="../../Dashboard/Images/icon_search.svg">
             <button style="text-decoration: none; border: none; background-color: white;">
-                <a href="../../Perfil/Codes/perfil.html">
-                    <img src="../Images/icon_user.svg" alt="">
+                <a href="../../Perfil/Codes/perfilIndex.html">
+                    <img src="../../Dashboard/Images/icon_user.svg" alt="">
                 </a>
             </button>
         </div>
