--- a/Front End/Screens/Login/Codes/loginIndex.html
+++ b/Front End/Screens/Login/Codes/loginIndex.html
@@ -18,7 +18,7 @@
             <p class="inputs">Senha</p>
             <input id="input" placeholder="Informe sua senha" type="text">   
         </div>
-        <button id="continuar">Continuar</button>
+        <a href="../../Inicio/index.html"><button id="continuar">Continuar</button></a>
 
         <p id="outra_opção">Ou escolha a opção</p>
         <div class="outras_opções">
