--- a/Front End/Screens/Agenda dia/Codes/Agenda_dia.html
+++ b/Front End/Screens/Agenda dia/Codes/Agenda_dia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda dia</title>
-    <link rel="stylesheet" href="lista_de_eventos.css">
+    <link rel="stylesheet" href="Agenda_dia.css">
 </head>
 <body>
     
