--- a/Screens/Cadastro/cadastroIndex.html
+++ b/Screens/Cadastro/cadastroIndex.html
@@ -3,40 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="loginStyle.css">
+    <link rel="stylesheet" href="cadastroStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans"  rel="stylesheet">
-    <title>Login - 777 Eventos</title>
+    <title>Cadastro - 777 Eventos</title>
 </head>
 <body>
     <div class="main">
-        <img src="../../../imagens/logo_preta_simples.png" alt="" height="250" width="250">
-        <p id="mensagem_inicial"><strong>Bem vindo ao 777 Eventos</strong></p>
-        
+        <img src="../../imagens/logo_preta_simples.png" alt="" width="250" height="250">
+        <p id="mensagem_inicial"><strong>Bem vindo ao 777 eventos</strong></p>      
         <div class="login">
+            <p class="inputs">Nome completo</p>
+            <input id="input" placeholder="Informe seu nome completo" type="text">
             <p class="inputs">E-mail</p>
-            <input id="input" placeholder="Informe o seu e-mail" type="text">
+            <input id="input" placeholder="Digite um endereço de e-mail válido" type="text">
             <p class="inputs">Senha</p>
-            <input id="input" placeholder="Informe sua senha" type="text">   
+            <input id="input" placeholder="Digite uma senha" type="text">
         </div>
-        <a href="../../Inicio/index.html"><button id="continuar">Continuar</button></a>
+        <a href="../Dashboard/Codes/index.html"><button id="continuar">Continuar</button></a>
 
         <p id="outra_opção">Ou escolha a opção</p>
         <div class="outras_opções">
             <a href="" style="text-decoration: none;">
-                <button class="opção" id="entrar_google" >
-                    <img id="logo_google" src="../../../imagens/logo_google.svg" alt="Google">
+                <button class="opção" id="entrar_google">
+                    <img id="logo_google" src="../../imagens/logo_google.svg" alt="Google">
                     <p id="texto_google">Continuar com Google</p>
                 </button>
             </a>
             <a href="" style="text-decoration: none;">
                 <button class="opção" id="entrar_facebook">
-                    <img id="logo_facebook" src="../../../imagens/logo_facebook.svg" alt="Facebook">
+                    <img id="logo_facebook" src="../../imagens/logo_facebook.svg" alt="Facebook">
                     <p id="texto_facebook">Continuar com Facebook</p>
                 </button>
             </a>
         </div>
         <div class="cadastro">
-            <p id="cadastrar">Não tem conta? <a id="cadastrar_link" href="cadastro_page.html" style="text-decoration: none;">Criar conta</a></p>
+            <p id="cadastrar">Já tem conta? <a id="cadastrar_link" href="../Login/Codes/loginIndex.html" style="text-decoration: none;">Entrar</a></p>
         </div>
         <div class="termos">
             <p id="texto_termos">Este site é protegido pelo hCaptcha e está sujeito a sua <a id="link_termos" href="https://www.hcaptcha.com/privacy" style="text-decoration: none;">Política de privacidade</a> e <a id="link_termos" href="https://www.hcaptcha.com/terms" style="text-decoration: none;">Termos de Uso</a></p>
